[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }
tonic-build = "0.6"
prost-build = "0.9.0"
anyhow = { version = "1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
tonic = "0.6"
prost = "0.9"
prost-types = "0.9.0"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
anyhow = { version = "1" }
futures = "0.3.18"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
