[package]
name = "bodovana"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
anyhow = "1.0.8"
async-trait = "0.1.51"
futures = "0.3.4"
askama = "0.10.5"
actix-web = "4.0.0-beta.11"
actix-files = "0.6.0-beta.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.70"

[build-dependencies]
askama = "0.10.5"